--- a/.github/workflows/post-merge-dev.yml
+++ b/.github/workflows/post-merge-dev.yml
@@ -1,8 +1,8 @@
-name: ud83dude80 Post-Merge Validation
+name: Post-Merge Validation
 
 on:
   push:
-    branches: [ dev ]
+    branches: [dev]
 
 jobs:
   post-merge-validation:
@@ -12,13 +12,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Full history for SonarQube
+          fetch-depth: 0 # Full history for SonarQube
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          cache: 'npm'
+          node-version: "18"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -46,4 +46,4 @@ jobs:
         run: |
           echo "Sending mock notification to team channels..."
           echo "✅ Build and analysis successful on dev branch"
-          echo "🔍 Full quality report available at: https://sonarqube.example.com/dashboard?id=taskmaster-app"
+          echo "🔍 Full quality report available at: https://sonarqube.example.com/dashboard?id=amalimart"
