--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,8 +1,8 @@
-name: 🔍 PR Validation
+name: PR Validation
 
 on:
   pull_request:
-    branches: [ dev ]
+    branches: [dev]
     types: [opened, synchronize, reopened]
 
 jobs:
@@ -13,13 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Needed for commit validation
+          fetch-depth: 0 # Needed for commit validation
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-          cache: 'npm'
+          node-version: "18"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -47,7 +47,7 @@ jobs:
         run: |
           # Get all commit messages in the PR
           git log --format=%B ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} > commit_messages.txt
-          
+
           # Check each commit message
           while IFS= read -r message; do
             if [ -n "$message" ] && ! echo "$message" | grep -qE '^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test)\(([a-z0-9-]+)\): .+'; then
