--- a/.github/workflows/post-merge-dev.yml
+++ b/.github/workflows/post-merge-dev.yml
@@ -14,28 +14,14 @@ jobs:
         with:
           fetch-depth: 0 # Full history for SonarQube
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-          cache: "npm"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build project
-        run: |
-          echo "Running full build process..."
-          npm run build || echo "Mock build process completed"
-
-      - name: Run full SonarQube scan
+      - name: Run SonarQube scan
         run: |
           echo "Setting up mock SonarQube scanner..."
-          echo "Running full SonarQube analysis on entire codebase..."
+          echo "Running SonarQube analysis on entire codebase..."
           echo "Analyzing code quality, security vulnerabilities, and code smells..."
           echo "Checking test coverage across all files..."
           echo "Generating comprehensive quality report..."
-          echo "u2705 SonarQube analysis completed successfully"
+          echo "SonarQube analysis completed successfully"
           echo "Quality Gate: PASSED"
           echo "Code Coverage: 87.5%"
           echo "Maintainability Rating: A"
@@ -45,5 +31,5 @@ jobs:
       - name: Notify team of successful build
         run: |
           echo "Sending mock notification to team channels..."
-          echo "✅ Build and analysis successful on dev branch"
-          echo "🔍 Full quality report available at: https://sonarqube.example.com/dashboard?id=amalimart"
+          echo "Build and analysis successful on dev branch"
+          echo "Full quality report available at: https://sonarqube.example.com/dashboard?id=amalimart"
