--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -3,7 +3,7 @@ name: PR Validation
 on:
   pull_request:
     branches: [dev]
-    types: [synchronize, reopened, edited] # Excludes 'opened' as per your last change
+    types: [opened, synchronize, reopened, edited] # Excludes 'opened' as per your last change
 
 permissions:
   contents: read
