--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -3,11 +3,10 @@ name: PR Validation
 on:
   pull_request:
     branches: [dev]
-    types: [synchronize, reopened, edited] # Excludes 'opened' as per your last change
+    types: [opened, synchronize, reopened, edited]
 
 permissions:
   contents: read
-  # pull-requests: write # Removed
 
 jobs:
   validate-pr:
@@ -18,15 +17,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Needed for commit validation
-
-      # - name: Setup Package
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: "18"
-      #     cache: "npm"
-
-      # - name: Install dependencies
-      #   run: echo "Running mock install process..." && exit 0
 
       - name: Validate branch name
         run: |
