chore(scripts): add devops as a branch name 13

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Needed for commit validation
+          fetch-depth: 0
 
       - name: Validate branch name
         run: |
